add new css and image for background and header, will update img later

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,5 +1,5 @@
 .home-page-container {
-  background-image: url('../../public/chanel.jpg');
+  background-image: url('../img/chanel.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
